<!--Bernardo Silveira dos Santos Castro, 301073235, Section 02-->
<resources>
    <string name="app_name" translatable="false">BernardoLab3</string>
    <string name="welcome">Welcome to my application</string>
    <string name="draw">Drawing</string>
    <string name="anim">Animation</string>
    <string name="tweeney">Tweeney</string>
    <string name="info" translatable="false">Bernardo Castro 301073235</string>
    <string name="clear">Clear Draw</string>
    <string name="name" translatable="false">Bernardo</string>
    <string name="last_name" translatable="false">Castro</string>
    <string name="animation">Display Animation</string>
    <string name="speed">Speed</string>
    <string name="stop">Stop</string>
    <string name="units">Units p/s</string>
    <string name="start">Start</string>
    <string name="drawButton">Draw</string>
    <string name="color">Color</string>
    <string name="thickness">Thickness</string>
</resources>
