<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/bernardoSecondFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CastroFragment"
    android:background="@color/backgroundFragment2">

   <Button
       android:id="@+id/bernardoButtonAnimation"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/animation"
       android:textStyle="bold|italic"/>


   <ImageView
       android:id="@+id/benrardoAnimationFrame"
       android:layout_width="match_parent"
       android:layout_height="@dimen/animation_height"
       android:layout_marginTop="@dimen/animation_top"/>

   <LinearLayout
       android:layout_marginTop="@dimen/layout_buttons"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
      <Button
          android:id="@+id/bernardoSpeedButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/speed"
          android:textStyle="bold|italic"/>

      <Button
          android:id="@+id/bernardoStopButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/stop"
          android:textStyle="bold|italic"/>
      <Button
          android:id="@+id/bernardoUnitsButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/units"
          android:textStyle="bold|italic"/>

   </LinearLayout>



</FrameLayout>