<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/bernardoThirdFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".S301073235Fragment"
    android:background="@color/backgroundFragment3">


    <TextView
        android:id="@+id/bernardoFirstName"
        android:layout_marginTop="@dimen/names_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        />
    <TextView
        android:id="@+id/bernardoLastName"
        android:layout_marginTop="@dimen/names_top"
        android:layout_marginStart="@dimen/last_name_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        />

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <ImageView

            android:id="@+id/bernardoEarth"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:src="@drawable/earth"/>

        <ImageView
            android:id="@+id/bernardoMoon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/moon"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="600dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/bernardoStartTween"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"/>
        <Button
            android:id="@+id/bernardoStopTween"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"/>
    </LinearLayout>

</FrameLayout>